--- a/package.json
+++ b/package.json
@@ -6,22 +6,18 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
+    "build": "npm run build-ts && npm run tslint",
     "serve": "node dist/program.js",
     "watch-node": "nodemon dist/program.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-static\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest --forceExit --coverage --verbose",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
-    "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "watch-static": "nodemon --watch src -e html -x \"npm run copy-static-assets\"",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/program.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
     "async": "^3.0.1",
@@ -31,42 +27,23 @@
     "dotenv": "^8.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.16.2",
-    "express-validator": "^6.0.1",
     "lodash": "^4.17.13",
-    "passport-facebook": "^3.0.0",
-    "pug": "^2.0.4",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
     "rxjs": "^6.5.2",
     "websocket": "^1.0.29",
     "winston": "^2.4.2"
   },
   "devDependencies": {
-    "@types/async": "^3.0.0",
-    "@types/bcrypt-nodejs": "^0.0.30",
     "@types/body-parser": "^1.17.0",
-    "@types/compression": "^0.0.36",
+    "@types/compression": "0.0.36",
     "@types/dotenv": "^6.1.1",
-    "@types/errorhandler": "^0.0.32",
+    "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
-    "@types/express-session": "^1.15.13",
-    "@types/jest": "^24.0.15",
-    "@types/lodash": "^4.14.134",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^12.0.10",
-    "@types/request": "^2.48.1",
-    "@types/shelljs": "^0.8.5",
-    "@types/supertest": "^2.0.7",
+    "@types/node": "^12.6.2",
     "@types/websocket": "0.0.40",
-    "@types/winston": "^2.3.9",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "jest": "^24.8.0",
-    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
-    "shelljs": "^0.8.3",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
